--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <body>
 	<div class="top">
 		<div class="top-left">
-			<div id="weather"></div>
-		</div>
-		<div class="top-right">
 			<div id="clock"></div>
 			<div id="calendar"></div>
+		</div>
+		<div class="top-right">
+			<div id="weather"></div>
 		</div>
 	</div>
 
 	<div class="container">
-		<div class="middle-center">middle center</div>
+		<div class="middle-center"></div>
 		<div class="bottom-left">bottom left</div>
 		<div class="bottom-right">bottom right</div>
 		<div class="bottom-center">bottom center</div>
