--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 		<div class="middle-center"></div>
 		<div class="bottom-left">bottom left</div>
 		<div class="bottom-right">bottom right</div>
-		<div class="bottom-center">bottom center</div>
+		<div class="bottom-center">
+			<div id="speech"></div>
+		</div>
 	</div>
 
 	<script src="dist/bundle.js"></script>
